--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
-title: Your awesome title
-author: GitHub User
+title: Your awe
+author: aidar
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
+  Write an awesome descridocument head meta (for
   Google search results) and in your feed.xml site description.
 
 # social links
@@ -11,3 +10,4 @@ twitter_username: your-twitter-handle
 github_username:  your-github-handle
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+theme: minima
