--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Your awe
-author: aidar
+title: "YOUR"
+date: 2019-09-30
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome descridocument head meta (for
